fix alignment of labels

--- a/skins/_reference/yacss.scss
+++ b/skins/_reference/yacss.scss
@@ -831,7 +831,6 @@ figure {max-width: 100%;}
     input[type=radio]+label, input[type=checkbox]+label {
         margin-left:.2em;
         max-width: 95%;
-        vertical-align: top;
     }
 }
 
